fixing image spacing and adding photo description

--- a/css/style.css
+++ b/css/style.css
@@ -416,12 +416,12 @@ footer {
   width:100%;
   box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);
   border-radius: .5rem;
-  margin: 1.25rem 0 1rem;
+  margin: 1.5rem 0 0.5rem;
 }
 .block__text--small {
     font-size: 0.75rem;
     line-height: 1rem;
-    margin: 0.25rem 0 2rem;
+    margin: 0.25rem 0 2.5rem;
     text-align: center;
 }
 
